--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "turnstile-verify",
   "version": "1.0.0",
-  "main": "./index.js",
+  "description": "Server side verification for Cloudflare Turnstile",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +15,10 @@
   },
   "author": "maaaathis",
   "license": "MIT",
+  "keywords": [
+    "turnstile",
+    "cloudflare"
+  ],
   "bugs": {
     "url": "https://github.com/maaaathis/turnstile-verify/issues"
   },
@@ -23,10 +28,12 @@
     "README.md"
   ],
   "devDependencies": {
-    "rollup-plugin-dts": "^6.1.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "rollup": "^4.3.1",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.2.2"
-  },
-  "dependencies": {},
-  "description": ""
+  }
 }
