--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "turnstile-verify",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Server side verification for Cloudflare Turnstile",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
