--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "name": "turnstile-verify",
-  "version": "1.1.1",
-  "description": "Server side verification for Cloudflare Turnstile",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "tsc && rollup -c",
-    "publishPackage": "npm publish --access public "
-  },
+  "version": "1.1.8",
+  "description": "Server-side verification for Cloudflare Turnstile",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maaaathis/turnstile-verify.git"
@@ -23,18 +15,55 @@
   "bugs": {
     "url": "https://github.com/maaaathis/turnstile-verify/issues"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "index.js",
-    "index.d.ts",
-    "README.md"
+    "dist/"
   ],
+  "scripts": {
+    "build": "run-p build:**",
+    "build:cjs": "swc ./src/index.ts -o dist/index.js -C module.type=commonjs",
+    "build:esm": "swc ./src/index.ts -o dist/index.mjs -C module.type=es6 ",
+    "build:tsc": "tsc --project tsconfig.json",
+    "check": "tsc --project tsconfig.json --noEmit",
+    "prepublishOnly": "pnpm build"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "rollup": "^4.3.1",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.2.2"
+    "@swc/cli": "0.1.57",
+    "@swc/core": "1.2.198",
+    "@types/node": "18.11.18",
+    "npm-run-all": "4.1.5",
+    "ts-node": "10.8.1",
+    "typescript": "5.1.3"
+  },
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "import": "./dist/index.mjs",
+        "require": "./dist/index.js",
+        "types": "./dist/index.d.ts"
+      },
+      "./types": {
+        "types": "./dist/types.d.ts"
+      }
+    },
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts"
+  },
+  "packageManager": "pnpm@8.6.3",
+  "engines": {
+    "node": ">=18"
   }
 }
