--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "turnstile-verify",
-  "version": "1.1.13",
-  "description": "Server-side verification for Cloudflare Turnstile",
+  "version": "1.2.0",
+  "sideEffects": false,
+  "description": "Server-side verification for Cloudflare Turnstile captchas",
+  "homepage": "https://github.com/maaaathis/turnstile-verify",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maaaathis/turnstile-verify.git"
@@ -10,67 +12,42 @@
   "license": "MIT",
   "keywords": [
     "turnstile",
-    "cloudflare"
+    "cloudflare",
+    "captcha"
   ],
   "bugs": {
-    "url": "https://github.com/maaaathis/turnstile-verify/issues"
+    "url": "https://github.com/maaaathis/turnstile-verify/issues/new"
   },
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./types": {
-      "types": "./dist/types.d.ts"
-    }
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.esm",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/"
+    "dist",
+    "README.md",
+    "package.json"
   ],
   "scripts": {
-    "build": "run-p build:**",
-    "build:cjs": "swc ./src/index.ts -o dist/index.js -C module.type=commonjs",
-    "build:esm": "swc ./src/index.ts -o dist/index.mjs -C module.type=es6 ",
-    "build:tsc": "tsc --project tsconfig.json",
+    "build": "yarn test && tsup src/index.ts --dts --format cjs,esm && attw --pack .",
     "check": "tsc --project tsconfig.json --noEmit",
     "format": "yarn prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-    "test": "run-p test:**",
+    "test": "run test:format",
     "test:format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-    "prepublishOnly": "pnpm test"
+    "prepublishOnly": "run test",
+    "release": "yarn build && yarn npm publish"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "packageManager": "yarn@4.3.1",
   "devDependencies": {
-    "@swc/cli": "^0.3.14",
-    "@swc/core": "^1.6.5",
-    "@types/is-url": "^1.2.32",
-    "@types/jsdom": "21.1.7",
+    "@arethetypeswrong/cli": "^0.15.3",
     "@types/node": "20.14.8",
-    "npm-run-all": "4.1.5",
     "prettier": "^3.3.2",
-    "ts-node": "10.9.2",
-    "typescript": "5.5.2"
-  },
-  "publishConfig": {
-    "exports": {
-      ".": {
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.js",
-        "types": "./dist/index.d.ts"
-      },
-      "./types": {
-        "types": "./dist/types.d.ts"
-      }
-    },
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts"
-  },
-  "packageManager": "pnpm@8.6.3",
-  "engines": {
-    "node": ">=18"
+    "tsup": "^8.2.3",
+    "typescript": "^5.5.4"
   }
 }
